# textecca

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  default.nix  spec_notes.md
derive_command/: Cargo.toml  attrs.rs  lib.rs  param.rs
derive_fromargs/: Cargo.toml  lib.rs
doc/: SUMMARY.md  about.md
doc/design/: outline.md  textecca.md
example/: simple.tca
friendly_html/: Cargo.toml  lib.rs  tendril_ext.rs
report/: outline.md  report.md
src/: html.rs  lib.rs  main.rs  parse.rs  parse_util.rs  test_util.rs  tokenize.rs  ucd_general_category.rs
src/eval/: arg_spec.rs  builtins.rs  call_args.rs  cmd.rs  mod.rs
src/lex/: blocks.rs  cmd.rs  mod.rs  parse.rs  parse_util.rs  test_util.rs  tokenize.rs  ucd_general_category.rs
src/lex/ucd_tables/: general_category.rs
src/output/: doc.rs  kinds.rs  length.rs  mod.rs
src/output/doc/: mod.rs
src/output/ser/: common.rs  mod.rs
std/: Cargo.toml  lib.rs
templates/: doc.tera.html
test-data/paragraphs/: trailing-whitespace.txt
textecca/: Cargo.toml  Makefile  default.nix  lib.rs  main.rs
textecca/builtins/: mod.rs
textecca/cmd/: args.rs  default_cmd.rs  mod.rs  thunk.rs
textecca/doc/: blocks.rs  builder.rs  inlines.rs  length.rs  mod.rs  structure.rs
textecca/env/: mod.rs
textecca/eval/: env.rs  ir.rs  mod.rs
textecca/eval/cmd/: arg_spec.rs  builtins.rs  call_args.rs  common.rs  mod.rs  param_spec.rs
textecca/lex/: cmd.rs  mod.rs
textecca/output/: mod.rs
textecca/output/doc/: blocks.rs  inlines.rs  structure.rs
textecca/output/ser/: common.rs
textecca/parse/: arena.rs  cmd.rs  default_parser.rs  lex.rs  mod.rs  parse_util.rs  test_util.rs
textecca/parse/ucd_tables/: mod.rs  property_bool.rs
textecca/ser/: html.rs  mod.rs
textecca/ser/html/: math.rs  mod.rs  slugify.rs
