[package]
name = "textecca"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "textecca"

[dependencies]
nom = "5.1.1"
nom_locate = "2.0.0"
wyz = "0.2.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
indoc = "0.3.5"
