[package]
name = "textecca"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "textecca"

[dependencies]
nom = "5.1.1"  # Parsing.
nom_locate = "2.0.0"  # Parser spans.
wyz = "0.2.0"  # Utils. (Thanks so much for this one, myrrlyn!)
html5ever = "0.25.0"  # HTML parsing/serialization.
# ammonia = "3" # HTML sanitization.
# textwrap = "0.11" # word wrapping, indenting, deindenting
# Inflector = "0.11"  # String casing / transformations.

[dev-dependencies]
pretty_assertions = "0.6.1"  # Better assert_eq! and assert_ne! macros.
indoc = "0.3.5" # Indented multiline strings.
