[package]
name = "derive_fromargs"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
textecca = { path = "../textecca" }
syn = "1.0"
quote = "1.0"
Inflector = "0.11"
proc-macro2 = "1.0.15"
