[package]
name = "textecca_stdlib"
version = "0.0.1-alpha"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"
description = "A markup language for richly interactive documents."
# documentaton = ""
readme = "README.md"
repository = "https://github.com/9999years/textecca"
license = "AGPL-3.0"
keywords = ["markup", "typesetting", "programming-language"]
categories = [
    "parser-implementations",
    "text-processing",
    "command-line-utilities"
]
# build = ""
# exclude = []
# include = []

# [badges]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "textecca_stdlib"
path = "lib.rs"

[dependencies]
derive_command = { path = "../derive_command" }
textecca = { path = "../textecca" }

[dev-dependencies]
pretty_assertions = "0.6.1"  # Better assert_eq! and assert_ne! macros.
indoc = "0.3.5" # Indented multiline strings.
claim = "0.3.1"
typed-builder = "0.6.0"
