[package]
name = "textecca"
version = "0.0.1-alpha"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"
description = "A markup language for richly interactive documents."
# documentaton = ""
readme = "README.md"
repository = "https://github.com/9999years/textecca"
license = "AGPL-3.0"
keywords = ["markup", "typesetting", "programming-language"]
categories = [
    "parser-implementations",
    "text-processing",
    "command-line-utilities"
]
# build = ""
# exclude = []
# include = []

# [badges]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "textecca"
path = "lib.rs"

[dependencies]
nom = "5.1.1"  # Parsing.
nom_locate = "2.0.0"  # Parser spans.
wyz = "0.2.0"  # Utils. (Thanks so much for this one, myrrlyn!)
html5ever = "0.25.0"  # HTML parsing/serialization.
unicode-segmentation = "1.6.0"
ucd-util = "0.1.8"
ucd-trie = "0.1.3"
itertools = "0.9.0"
handlebars = "3.0.1"
typed-builder = "0.6.0"
thiserror = "1.0.18"
derivative = "2.1.1"
typed-arena = "2.0.1"
# structopt = "0.3.14"
# ammonia = "3" # HTML sanitization.
# textwrap = "0.11" # word wrapping, indenting, deindenting
# Inflector = "0.11"  # String casing / transformations.
# tantivy = "0.12.0"  # Search engine lib
# noise_search = "0.7.0"  # Search engine w/ interesting query lang
# rust_stemmers = "1.2.0" # Stemming for multiple languages

[dev-dependencies]
pretty_assertions = "0.6.1"  # Better assert_eq! and assert_ne! macros.
indoc = "0.3.5" # Indented multiline strings.
claim = "0.3.1"
